lang.java.statics.test/tests/positive/classes/methods/returninnerclasstype.yes.javtest
STATIX ok
JAVAC  ok

[A]
public class A {
    public class I {}
}

[B]
public class B {
    public A.I a() { return null; }
}

