lang.java.statics.test/tests/negative/interfaces/class-extends-interface.no.javtest
STATIX fail unification error.*CLASS.*INTF
JAVAC  fail no interface expected here

[I]
interface I {}

[A]
class A extends I {}
